gcc/testsuite/gdc.test/compilable/imports/test18651/b.d
import imports.test18651.c;
