gcc/testsuite/gdc.test/fail_compilation/imports/ice21060a/package.d
import imports.ice21060c;
